syntax = "proto3";

import "google/protobuf/descriptor.proto";

option go_package = "github.com/emcfarlane/larking/starlarkproto/testpb";

package starlarkproto.test;

enum Enum {
  ENUM_A = 0;
  ENUM_B = 1;
}

extend google.protobuf.MessageOptions { string my_option = 51234; }

message Message {
  option (my_option) = "Hello world!";

  string body = 1;
  enum Type {
    UNKNOWN = 0;
    GREETING = 1;
  }
  Type type = 2;
  repeated string strings = 3;
  Message nested = 4;
  map<string, Message> maps = 5;

  oneof oneofs {
    string one_string = 6;
    int64 one_number = 7;
  }
}

extend google.protobuf.MethodOptions { repeated string tag = 88888888; }

message GetMessageRequest {
  string message_id = 1;
  string user_id = 2;
}

service Messaging {
  rpc GetMessage(GetMessageRequest) returns (Message) {
    option (tag) = "tagged";
  }
}
